# dotlin

./: COMPLETED_FEATURES.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_STATUS.md  INSTRUCTIONS.md  MISSING_KOTLIN_FEATURES.md  PROMPTS.md  README.md  ROADMAP_V1.md  STATUS.md  STRUCTURE.md  TODO.md  build_and_test_windows.bat  dummy.rs  implementation_plan.md  next.md  run.cmd  rust-toolchain.toml  test_add_only.lin  test_complex_compile.lin  test_input.txt  test_println.lin  test_runner.rs  test_start.lin  test_type_error.lin  tmp.rs
.cargo/: config.toml
.github/workflows/: ci.yml  release-upload.yml  windows-artifacts.yml
crates/dotc/: Cargo.toml
crates/dotc/src/: main.rs
crates/dotc/tests/: iter_integration.rs  iter_tuple_integration.rs
crates/dotfmt/: Cargo.toml
crates/dotfmt/src/: main.rs
crates/dotlin_ast/: Cargo.toml
crates/dotlin_ast/src/: lib.rs
crates/dotlin_cli/: Cargo.toml
crates/dotlin_cli/src/: interpreter.rs  lib.rs  main.rs
crates/dotlin_cli/tests/: defaults.rs  functions.rs  logical.rs  loops.rs  operators.rs  returns.rs  templates.rs  varargs.rs  vars.rs
crates/dotlin_codegen/: Cargo.toml
crates/dotlin_codegen/src/: lib.rs
crates/dotlin_codegen/tests/: iter_codegen_integration.rs
crates/dotlin_diagnostics/: Cargo.toml
crates/dotlin_diagnostics/src/: lib.rs
crates/dotlin_driver/: Cargo.toml
crates/dotlin_ffi/: Cargo.toml
crates/dotlin_fmt/: Cargo.toml
crates/dotlin_interpreter/: Cargo.toml
crates/dotlin_interpreter/src/: lib.rs
crates/dotlin_lexer/: Cargo.toml
crates/dotlin_lexer/src/: cursor.rs  lexer.rs  lib.rs  token.rs
crates/dotlin_lexer/tests/: lexer_tests.rs
crates/dotlin_lsp/: Cargo.toml
crates/dotlin_lsp/src/: main.rs
crates/dotlin_macro/: Cargo.toml
crates/dotlin_metadata/: Cargo.toml
crates/dotlin_mir/: Cargo.toml
crates/dotlin_parser/: Cargo.toml
crates/dotlin_parser/src/: lib.rs  parser.rs
crates/dotlin_parser/src/ast/: mod.rs
crates/dotlin_pkg/: Cargo.toml
crates/dotlin_runtime/: Cargo.toml  build.rs
crates/dotlin_runtime/src/: lib.rs
crates/dotlin_semantic/: Cargo.toml
crates/dotlin_span/: Cargo.toml
crates/dotlin_std/: Cargo.toml
crates/dotlin_stdlib/: Cargo.toml  IMPLEMENTATION_PLAN.md  README.md
crates/dotlin_symbol/: Cargo.toml
crates/dotlin_test/: Cargo.toml
crates/dotlin_typechecker/: Cargo.toml
crates/dotlin_typechecker/src/: lib.rs
crates/dotpkg/: Cargo.toml
crates/dotpkg/src/: main.rs
crates/dotrepl/: Cargo.toml
crates/dotrepl/src/: main.rs
docs/: AGENTS.md  CHANGELOG.md  CROSS_PLATFORM_BUILD.md  FOREACH_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_CURRENT.md  IMPLEMENTATION_SUMMARY_NEW.md  INCREMENTAL_BUILDS.md  MATH_MODULE_IMPLEMENTATION.md  NOTES.md  PROMPTS.md  README.md  package.json
docs/dotlang/: BUILTIN_FUNCTIONS.md  ORGANIZATION_COMPLETE.md  PROJECT_ORGANIZATION.md
docs/language-spec/: 01-syntax.md
editors/code/: language-configuration.json  package.json
editors/code/syntaxes/: dotlin.tmLanguage.json
examples/: README.md  iter_test.lin  iter_tuple_test.lin
examples/args_example/: main.lin
examples/async_io/: main.lin
examples/basic/: array_basic_test.lin  basic_test.lin  complex_test.lin  comprehensive_math_test.lin  comprehensive_test.lin  debug_test.lin  final_comprehensive_test.lin  function_test.lin  hashmap_all_methods_test.lin  method_test.lin  minimal_test.lin  simple_math_test.lin  simple_test.lin  test_array.lin  test_array_advanced.lin  test_array_comprehensive.lin  test_array_methods.lin  test_array_real.lin  test_call.lin  test_call_simple.lin  test_compile.lin  test_comprehensive.lin  test_console_io.lin  test_file_io.lin  test_float.lin  test_foo.lin  test_foreach.lin  test_format.lin  test_hashmap.lin  test_hashmap_basic.lin  test_hashmap_complete.lin  test_hashmap_comprehensive.lin  test_hashmap_entries.lin  test_hashmap_iteration.lin  test_hashmap_real.lin  test_hello.lin  test_map_size_chain.lin  test_math_functions.lin  test_nested.lin  test_new_features.lin  (+12 more)
examples/concurrent_processing/: pipeline.lin
examples/data_structures/: main.lin
examples/dsl_builder/: main.lin
examples/ffi_example/: main.lin  native.c
examples/functions_expr/: main.lin
examples/functions_unit/: main.lin
examples/hello_world/: main.lin
examples/http_server/: Dotlin.toml  main.lin
examples/pattern_matching/: main.lin
examples/read_test/: main.lin
examples/vars_basic/: main.lin
examples/vars_infer/: main.lin
examples/vars_toplevel/: main.lin
examples/vars_uninit/: main.lin
ide/vscode/: .gitignore  .vscodeignore  README.md  RELEASE.md  language-configuration.json  package.json  tmp_test.mjs  tsconfig.json
ide/vscode/icons/: dotlin-icon-theme.json
ide/vscode/snippets/: dotlin.json
ide/vscode/src/: extension.ts  markdown-shiki.ts  markdown.ts  parser.ts  parser_test.ts  quickfix_helper.ts
ide/vscode/src/preview/: highlight-dotlin.ts
ide/vscode/syntaxes/: codeblock.json  dotlin.tmLanguage.json  kotlin.tmLanguage.json
lib/: dotlin_runtime.dll.lib
logs/: build_error.txt
scripts/: bootstrap.sh  check_windows_artifacts.ps1  install.ps1  install.sh
