[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Dotlin Contributors"]
license = "MIT"

[workspace.dependencies]
logos = "0.14"
thiserror = "2.0"
miette = { version = "7.2", features = ["fancy"] }
clap = { version = "4.5", features = ["derive"] }
