[package]
name = "dotc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
clap = { workspace = true }
miette = { workspace = true }
dotlin_parser = { path = "../dotlin_parser" }
dotlin_ast = { path = "../dotlin_ast" }
dotlin_lexer = { path = "../dotlin_lexer" }
dotlin_codegen = { path = "../dotlin_codegen" }
dotlin_typechecker = { path = "../dotlin_typechecker" }
dotlin_interpreter = { path = "../dotlin_interpreter" }
cc = "1.0"
