[package]
name = "dotfmt"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
clap = { version = "4.0", features = ["derive"] }
dotlin_lexer = { path = "../dotlin_lexer" }
dotlin_parser = { path = "../dotlin_parser" }
dotlin_ast = { path = "../dotlin_ast" }
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
