[package]
name = "dotlin_codegen"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
dotlin_ast = { path = "../dotlin_ast" }
thiserror = { workspace = true }
cranelift = "0.111"
cranelift-module = "0.111"
cranelift-object = "0.111"
cranelift-jit = "0.111"
cranelift-native = "0.111"
cranelift-frontend = "0.111"
cranelift-codegen = "0.111"
anyhow = "1.0"
target-lexicon = "0.12"
