[package]
name = "dotlin_lsp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tower-lsp = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
dotlin_lexer = { path = "../dotlin_lexer" }
dotlin_parser = { path = "../dotlin_parser" }
dotlin_typechecker = { path = "../dotlin_typechecker" }
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
